--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,7 +1,7 @@
 {
   "root": true,
-  "extends": ["next/core-web-vitals"],
-  "plugins": ["testing-library"],
+  "extends": ["next/core-web-vitals", "prettier"],
+  "plugins": ["testing-library", "prettier"],
   "overrides": [
     // Only uses Testing Library lint rules in test files
     {
@@ -11,5 +11,9 @@
       ],
       "extends": ["plugin:testing-library/react"]
     }
-  ]
+  ],
+  "rules": {
+    "prettier/prettier": "warn",
+    "no-console": "warn"
+  }
 }
