--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "husky": "^8.0.1",
     "jest": "28.1.0",
     "jest-environment-jsdom": "28.1.0",
+    "lint-staged": "^13.0.3",
     "prettier": "^2.7.1",
     "typescript": "4.6.4"
   }
