--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,19 +1,3 @@
 {
-  "root": true,
-  "extends": ["next/core-web-vitals", "prettier"],
-  "plugins": ["testing-library", "prettier"],
-  "overrides": [
-    // Only uses Testing Library lint rules in test files
-    {
-      "files": [
-        "**/__tests__/**/*.[jt]s?(x)",
-        "**/?(*.)+(spec|test).[jt]s?(x)"
-      ],
-      "extends": ["plugin:testing-library/react"]
-    }
-  ],
-  "rules": {
-    "prettier/prettier": "warn",
-    "no-console": "warn"
-  }
+  "extends": "next/core-web-vitals"
 }
