--- a/package.json
+++ b/package.json
@@ -1,31 +1,26 @@
 {
+  "name": "snoopify",
+  "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "test": "jest --watch",
-    "test:ci": "jest --ci"
+    "lint": "next lint"
   },
   "dependencies": {
-    "@tanstack/react-query": "^4.13.0",
-    "next": "latest",
-    "react": "^18.1.0",
-    "react-dom": "^18.1.0"
+    "react": "^18",
+    "react-dom": "^18",
+    "next": "14.2.5"
   },
   "devDependencies": {
-    "@tanstack/react-query-devtools": "^4.13.0",
-    "@testing-library/jest-dom": "5.16.4",
-    "@testing-library/react": "13.2.0",
-    "@testing-library/user-event": "14.2.0",
-    "@types/react": "18.0.9",
-    "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-prettier": "^4.2.1",
-    "husky": "^8.0.1",
-    "jest": "28.1.0",
-    "jest-environment-jsdom": "28.1.0",
-    "lint-staged": "^13.0.3",
-    "prettier": "^2.7.1",
-    "typescript": "4.6.4"
+    "typescript": "^5",
+    "@types/node": "^20",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
+    "postcss": "^8",
+    "tailwindcss": "^3.4.1",
+    "eslint": "^8",
+    "eslint-config-next": "14.2.5"
   }
 }
