ci: fix github workflows

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -40,8 +40,7 @@ jobs:
         #   -t gcr.io/<Project_ID>/<Image>:latest .
         #   docker push gcr.io/${{ secrets.PROJECT_ID }}/<Image>:latest
         run: |
-          docker build \
-          . --file Dockerfile \
+          docker build --file Dockerfile \
           -t gcr.io/${{ secrets.PROJECT_ID }}/snoopify-dev:latest .
           docker push gcr.io/${{ secrets.PROJECT_ID }}/snoopify-dev:latest
 
