--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,6 +32,7 @@ jobs:
         run: gcloud auth configure-docker gcr.io
 
       - name: Build and Push Docker image
+        working-directory: ./
         # Write your env here
         # run: |
         #   docker build \
