--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,7 +32,6 @@ jobs:
         run: gcloud auth configure-docker gcr.io
 
       - name: Build and Push Docker image
-        context: .
         # Write your env here
         # run: |
         #   docker build \
@@ -41,7 +40,7 @@ jobs:
         #   -t gcr.io/<Project_ID>/<Image>:latest .
         #   docker push gcr.io/${{ secrets.PROJECT_ID }}/<Image>:latest
         run: |
-          docker build --tag gcr.io/${{ secrets.PROJECT_ID }}/snoopify-dev:latest .
+          docker build . --tag gcr.io/${{ secrets.PROJECT_ID }}/snoopify-dev:latest
           docker push gcr.io/${{ secrets.PROJECT_ID }}/snoopify-dev:latest
 
       - name: Deploy Docker container to VM
